style.css
body {
  background-color: #222222;
  width: 100%;
  position: relative;
  color: rgb(240, 240, 240);
  position: relative;
  font-family: Arial, sans-serif;
}

a {
  color: #FFA500;
}

button {
  padding: 0.5em;
  border-radius: 0.5em;
  border: 1px solid #111;
}

.discord {
  width: 75%;
  background-color: #1c1b1e;
  border-radius: 0.5em;
}

.discord button {
  padding: 0.5em;
  background-color: #5865f2;
}

.discord a {
  text-decoration: none;
}

.discord button:hover {
  background-color: #2d3fff;
}

.discord a {
  color: #FFF;
}

.discord-content {
  padding: 1em;
  padding-top: 0;
}

.wallpaper img {
  width: 100%;
  border-radius: 0.5em;
}

/* PC */
@media only screen and (min-width: 769px) {
  .navbar ul {
    background-color: rgba(0, 0, 0, 0.165);
    border-radius: 1.5rem;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    display: flex;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
  }

  .navbar li a,
  .dropbtn {
    display: inline-block;
    color: white;
    text-align: center;
    text-decoration: none;
    padding: 14px 16px;
    font-size: 1rem;
    border: none;
    cursor: default;
    -webkit-transition-duration: 0.4s;
    /* Safari */
    transition-duration: 0.4s;
  }

  .navbar li a:hover,
  .dropdown:hover .dropbtn {
    background-image: radial-gradient(rgb(34, 34, 60), #222222);
    cursor: pointer;
  }

  .navbar li.dropdown {
    display: inline-block;
  }

  .navbar ul li:first-child {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    margin-right: auto;
    float: left;
  }

  .navbar ul li:last-child {
    margin-left: auto;
    float: right;
  }

  .dropdown-content {
    display: none;
    position: absolute;
    min-width: 160px;
    border-bottom-left-radius: 1em;
    border-bottom-right-radius: 1em;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
    z-index: 1;
  }

  .dropdown-content a {
    color: white;
    background-color: rgba(0, 0, 0, 0.165);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }

  .dropdown:hover .dropdown-content {
    display: block;
  }

  .dropdown-content a:last-child {
    border-bottom-right-radius: 1em;
    border-bottom-left-radius: 1em;
  }

  main {
    max-width: 60em;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    align-content: center;
  }
figure {
  width: 100%;
  max-width: 10em;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 auto;
}

figure img {
  width: 100%;
  border-radius: 0.5em;
  display: block;
}

figure figcaption {
  text-align: center;
  color: #111;
  background-color: rgba(255, 255, 255, 0.7);
  transform: translateY(-100%);
  border-bottom-left-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
}

/* smol devices */
@media only screen and (max-width: 768px) {
  .pc-nav {
    display: none
  }
}

